[gd_scene load_steps=7 format=3 uid="uid://bk5rchg4mt0js"]

[ext_resource type="Script" path="res://addons/graph_dialog_system/editor/scripts/settings/translation_settings.gd" id="1_dnk3v"]
[ext_resource type="PackedScene" uid="uid://secb1eoygm27" path="res://addons/graph_dialog_system/editor/components/locales_selector.tscn" id="2_qh116"]
[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/graph_dialog_system/theme/main_theme.tres" id="3_poal8"]
[ext_resource type="PackedScene" uid="uid://bceidtkw07484" path="res://addons/graph_dialog_system/editor/components/folder_field.tscn" id="4_01lks"]
[ext_resource type="PackedScene" uid="uid://bxwvdcjc16ytf" path="res://addons/graph_dialog_system/editor/components/file_field.tscn" id="4_erkog"]
[ext_resource type="Texture2D" uid="uid://duvyymvtfnkss" path="res://addons/graph_dialog_system/icons/File.svg" id="6_g5fpe"]

[node name="TranslationSettings" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnk3v")

[node name="LocalesSettings" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="LocalesSettings"]
layout_mode = 2

[node name="Title" type="Label" parent="LocalesSettings/Container"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Localization Settings"

[node name="DefaultLocale" type="HBoxContainer" parent="LocalesSettings/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="LocalesSettings/Container/DefaultLocale"]
layout_mode = 2
text = "Default Locale"

[node name="OptionButton" type="OptionButton" parent="LocalesSettings/Container/DefaultLocale"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "en"
popup/item_1/text = "es"
popup/item_1/id = 1
popup/item_2/text = "ja"
popup/item_2/id = 2

[node name="TestingLocale" type="HBoxContainer" parent="LocalesSettings/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="LocalesSettings/Container/TestingLocale"]
layout_mode = 2
text = "Testing Locale"

[node name="OptionButton" type="OptionButton" parent="LocalesSettings/Container/TestingLocale"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "en"
popup/item_1/text = "es"
popup/item_1/id = 1
popup/item_2/text = "ja"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="LocalesSettings/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LocalesSelector" parent="LocalesSettings/Container" instance=ExtResource("2_qh116")]
unique_name_in_owner = true
layout_mode = 2

[node name="CSVFiles" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="CSVFiles"]
layout_mode = 2

[node name="Title" type="Label" parent="CSVFiles/Container"]
layout_mode = 2
theme = ExtResource("3_poal8")
theme_type_variation = &"HeaderSmall"
text = "CSV Translation Files"

[node name="CSVFolder" type="HBoxContainer" parent="CSVFiles/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="CSVFiles/Container/CSVFolder"]
layout_mode = 2
text = "CSV Files Folder"

[node name="CSVFolderField" parent="CSVFiles/Container/CSVFolder" instance=ExtResource("4_01lks")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CharCSVFile" type="HBoxContainer" parent="CSVFiles/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="CSVFiles/Container/CharCSVFile"]
layout_mode = 2
text = "Character Names File"

[node name="FileField" parent="CSVFiles/Container/CharCSVFile" instance=ExtResource("4_erkog")]
layout_mode = 2
size_flags_horizontal = 3
file_filters = PackedStringArray("*.csv")

[node name="CollectTranslations" type="Button" parent="CSVFiles/Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Collect Translations"
icon = ExtResource("6_g5fpe")

[connection signal="item_selected" from="LocalesSettings/Container/DefaultLocale/OptionButton" to="." method="_on_default_locale_selected"]
[connection signal="item_selected" from="LocalesSettings/Container/TestingLocale/OptionButton" to="." method="_on_testing_locale_selected"]
[connection signal="pressed" from="CSVFiles/Container/CollectTranslations" to="." method="_on_collect_translations_pressed"]
